# simple_cmake_guide

./: .gitmodules  CMakeLists.txt  README.md
example_calculator/: CMakeLists.txt  Names.cpp  Names.h  Token.cpp  Token.h  Variable.h  calculator.cpp  calculator_globals.cpp  calculator_globals.h  const_kinds.h  main_grammar_functions.cpp  main_grammar_functions.h  std_lib_facilities.h
example_eigen_package/: CMakeLists.txt  examples.hpp  main.cpp
example_hello_world/: CMakeLists.txt
example_hello_world/good/: CMakeLists.txt  hw.cpp
example_hello_world/nice/: CMakeLists.txt
example_hello_world/simple/: CMakeLists.txt  hw.cpp
example_hw/: CMakeLists.txt
example_hw/good/: CMakeLists.txt
example_hw/nice/: CMakeLists.txt  hw.cpp
example_hw/simple/: CMakeLists.txt  main.cpp
example_nlohmann_json_package/: CMakeLists.txt
example_nlohmann_json_package/libs/: Findnlohmann_json.cmake
example_nlohmann_json_package/src/: data.json  examples.hpp
